--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@types/react-redux": "^7.1.33",
     "babel-jest": "^29.7.0",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.17",
     "expo-av": "~13.10.6",
     "expo-camera": "~14.1.3",
