--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "ts:check": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/preset-env": "^7.24.5",
@@ -27,16 +28,22 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-status-bar": "~1.11.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
+    "react-native-barcode-builder": "^2.0.0",
+    "react-native-barcode-svg": "^0.0.15",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-mmkv": "^2.12.2",
+    "react-native-permissions": "^4.1.5",
+    "react-native-ping": "^1.2.8",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "14.1.0",
+    "react-native-thermal-receipt-printer-image-qr": "^0.1.11",
     "react-native-unistyles": "^2.7.2",
     "react-redux": "^9.1.2",
     "react-test-renderer": "18.1.0",
