--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react-native": "0.73.6",
     "react-native-barcode-builder": "^2.0.0",
     "react-native-barcode-svg": "^0.0.15",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-permissions": "^4.1.5",
     "react-native-ping": "^1.2.8",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
